@@ -1,0 +1,3 @@
+ALTER TABLE castleServer_server_stats ADD max_concurrent_connections INT NOT NULL DEFAULT 0 AFTER unique_users;
+
+UPDATE castleServer_server_stats set max_concurrent_connections = '0';
