@@ -1292,6 +1292,8 @@ function cd_setupDatabase() {
             "stat_date DATE NOT NULL PRIMARY KEY," .
             "unique_users INT NOT NULL DEFAULT 0," .
 
+            "max_concurrent_connections INT NOT NULL DEFAULT 0," .
+
             "edit_count INT NOT NULL DEFAULT 0," .
 
             "house_tiles_bought INT NOT NULL DEFAULT 0," .
@@ -9096,6 +9098,24 @@ function cd_connectToDatabase() {
     mysql_select_db( $databaseName )
         or cd_operationError( "Could not select $databaseName database: " .
                               mysql_error() );
+
+
+    $result = mysql_query( "SHOW FULL PROCESSLIST;", $cd_mysqlLink );
+
+    $numRows = mysql_numrows( $result );
+
+    cd_updateMaxStat( "max_concurrent_connections", $numRows );
+    
+    global $mysqlConnectionCountThreshold;
+
+    if( $numRows > $mysqlConnectionCountThreshold ) {
+        cd_informAdmin(
+            "This is a warning message generated by ".
+            "The Castle Doctrine server.  ".
+            "The data base currently has $numRows connections. ".
+            "The warning threshold is $mysqlConnectionCountThreshold ".
+            "connections." );
+        }
     }
 
 
@@ -10022,6 +10042,28 @@ function cd_callAdmin( $inTextMessage ) {
     return;
     }
 
+
+
+
+
+// informs admin by email and phone, if either are enabled
+// of a non-fatal but serious condition
+function cd_informAdmin( $inMessage ) {
+    global $emailAdminOnFatalError, $callAdminInEmergency;
+
+
+    if( $emailAdminOnFatalError ) {
+        global $adminEmail;
+        
+        cd_mail( $adminEmail, "Castle Doctrine server issue",
+                 $inMessage );
+        }
+    if( $callAdminInEmergency ) {
+        cd_callAdmin( $inMessage );
+        }
+    }
+
+    
 
 
 ?>
